--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ddl-tools",
   "version": "0.0.1",
   "description": "DDL file tools",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "electron": "electron ."
+    "start": "electron ."
   },
   "keywords": [
     "DDL"
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^2.0.2",
-    "fs-extra": "^6.0.1"
+    "fs-extra": "^6.0.1",
+    "semantic-ui": "^2.3.1"
   }
 }
