--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "dependencies": {
     "electron": "^2.0.2",
     "fs-extra": "^6.0.1",
-    "semantic-ui": "^2.3.1"
+    "materialize-css": "^1.0.0-rc.1"
   }
 }
