--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "author": "Casey J. Murphy",
   "license": "ISC",
   "dependencies": {
-    "electron": "^2.0.8",
+    "electron": "^2.0.15",
     "fs-extra": "^6.0.1",
-    "materialize-css": "^1.0.0-rc.1"
+    "materialize-css": "^1.0.0"
   }
 }
